find_package(PythonLibs)
include_directories(${PYTHON_INCLUDE_DIRS})
add_definitions(-DBOOST_PYTHON_SOURCE)
add_library (boost_python STATIC
	dict.cpp
	errors.cpp
	exec.cpp
	import.cpp
	list.cpp
	long.cpp
	module.cpp
	numeric.cpp
	object_operators.cpp
	object_protocol.cpp
	slice.cpp
	str.cpp
	tuple.cpp
	wrapper.cpp
        object/class.cpp
	object/enum.cpp
	object/function.cpp
	object/function_doc_signature.cpp
	object/iterator.cpp
	object/life_support.cpp
	object/pickle_support.cpp
	object/stl_iterator.cpp
	converter/arg_to_python_base.cpp
	converter/builtin_converters.cpp
	converter/from_python.cpp
	converter/registry.cpp
	converter/type_id.cpp
)

